fix: use allowedOriginPatterns to fix CORS for Vercel deployments